# pygolly

./: .gitignore  .gitmodules  README.md  pyproject.toml
.githooks/: pre-commit
